# dians

./: Cargo.toml  README.md
Domashna1/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
Domashna1/src/: main.rs
Domashna2/: README.md
Domashna3/: README.md
Domashna3/bff/: Dockerfile  package.json
Domashna3/bff/src/: server.ts
Domashna3/dians-backend/: docker-compose.yml  main.py  requirements.txt
Domashna3/dians-backend/API/: .dockerignore  Dockerfile  main.py  requirements.txt
Domashna3/dians-backend/Fundamental/: .dockerignore  Dockerfile  fundamental_analysis.py  main.py  requirements.txt  scraper.py
Domashna3/dians-backend/Fundamental_scraper/: Dockerfile  requirements.txt  scraper.py
Domashna3/dians-backend/LSTM/: Dockerfile  lstm_predictor.py  main.py  requirements.txt
Domashna3/dians-backend/Technical/: .dockerignore  Dockerfile  main.py  requirements.txt  tech_analysis.py
Domashna3/dians-frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json
Domashna3/dians-frontend/src/app/: layout.tsx
Domashna3/dians-frontend/src/components/: background..tsx  column_container.tsx  item.tsx  link.tsx  row.tsx  row_container.tsx  spinner.tsx
Domashna3/dians-frontend/src/content/: data_table.tsx  dropdown.tsx  fundamental.tsx  line_graph.tsx  lstm.tsx  navbar.tsx  technical.tsx
Domashna3/proxy/: .dockerignore  package-lock.json  tsconfig.json
Domashna3/proxy/src/: server.ts
Domashna4/: README.md  docker-compose.prod.yml  docker-compose.yml
src/: main.rs
(+10 files in other folders)
