[package]
name = "Scraper"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
regex = "1.11.1"
anyhow = "1.0.93"